# chimera

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/chimera/: __init__.py  cli.py
src/chimera/analysis/: __init__.py  arguments.py  callgraph.py  cfg.py  dataflow.py  diff.py  functions.py  objc.py  search.py  stack_frame.py  switch_table.py  xrefs.py
src/chimera/arch/: __init__.py
src/chimera/arch/arm64/: __init__.py  decoder.py  instructions.py  registers.py
src/chimera/decompiler/: __init__.py  codegen.py  ir.py  lifter.py  simplify.py  ssa.py  structuring.py  type_inference.py  types.py
src/chimera/loader/: __init__.py  macho.py  segments.py  symbols.py
src/chimera/project/: __init__.py  annotations.py  database.py
tests/: test_analysis.py  test_callgraph.py  test_decompiler.py  test_diff.py  test_disassembler.py  test_loader.py  test_objc.py  test_project.py  test_search.py
