[project]
name = "chimera"
version = "0.1.0"
description = "A reverse engineering framework for ARM64 macOS binaries"
readme = "README.md"
authors = [
    { name = "Marko Elez", email = "markoelez7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0",
    "networkx>=3.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
chimera = "chimera.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
